--- a/TP1/README
+++ b/TP1/README
@@ -1,3 +1,20 @@
+
 Binômes:
 	AKOTO Yao Arnaud
 	KONE Kafongo
+
+	### Instruction :
+	          
+			1)  Veuillez créer deux répertoires "bin" et "obj" à la racine du projet pour le bon fonctionnement du Makefile.
+
+			2) tous compiller : make all
+			   
+
+			3)execution de shell1 : make test_shell1
+			  
+
+			4)  execution de shell2 : make test_shell2
+
+
+			5)  execution de shell3 : make test_shell3
+
